--- a/project1.lpi
+++ b/project1.lpi
@@ -33,7 +33,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="12">
+    <Units Count="13">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -41,7 +41,7 @@
         <CursorPos X="8" Y="12"/>
         <TopLine Value="1"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="33"/>
+        <UsageCount Value="34"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
@@ -50,10 +50,10 @@
         <IsPartOfProject Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="32" Y="136"/>
-        <TopLine Value="108"/>
+        <CursorPos X="29" Y="113"/>
+        <TopLine Value="103"/>
         <EditorIndex Value="0"/>
-        <UsageCount Value="33"/>
+        <UsageCount Value="34"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
@@ -63,7 +63,7 @@
         <CursorPos X="36" Y="15"/>
         <TopLine Value="1"/>
         <EditorIndex Value="5"/>
-        <UsageCount Value="33"/>
+        <UsageCount Value="34"/>
         <Loaded Value="True"/>
       </Unit2>
       <Unit3>
@@ -73,7 +73,7 @@
         <CursorPos X="42" Y="18"/>
         <TopLine Value="56"/>
         <EditorIndex Value="7"/>
-        <UsageCount Value="33"/>
+        <UsageCount Value="34"/>
         <Loaded Value="True"/>
       </Unit3>
       <Unit4>
@@ -89,7 +89,7 @@
         <CursorPos X="5" Y="14"/>
         <TopLine Value="1"/>
         <EditorIndex Value="4"/>
-        <UsageCount Value="33"/>
+        <UsageCount Value="34"/>
         <Loaded Value="True"/>
       </Unit5>
       <Unit6>
@@ -117,7 +117,7 @@
         <CursorPos X="142" Y="61"/>
         <TopLine Value="36"/>
         <EditorIndex Value="3"/>
-        <UsageCount Value="29"/>
+        <UsageCount Value="30"/>
         <Loaded Value="True"/>
       </Unit9>
       <Unit10>
@@ -127,137 +127,148 @@
         <CursorPos X="92" Y="23"/>
         <TopLine Value="5"/>
         <EditorIndex Value="6"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
       </Unit10>
       <Unit11>
         <Filename Value="sinewave_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="sineWave_unit"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
+        <CursorPos X="5" Y="34"/>
+        <TopLine Value="24"/>
         <EditorIndex Value="2"/>
-        <UsageCount Value="20"/>
+        <UsageCount Value="21"/>
         <Loaded Value="True"/>
       </Unit11>
+      <Unit12>
+        <Filename Value="../../../usr/share/fpcsrc/2.2.4/rtl/objpas/math.pp"/>
+        <UnitName Value="math"/>
+        <CursorPos X="10" Y="276"/>
+        <TopLine Value="263"/>
+        <UsageCount Value="10"/>
+      </Unit12>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="16" Column="17" TopLine="16"/>
-      </Position1>
-      <Position2>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="96" Column="61" TopLine="68"/>
-      </Position2>
-      <Position3>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="21" Column="31" TopLine="6"/>
-      </Position3>
-      <Position4>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="18" Column="27" TopLine="3"/>
-      </Position4>
-      <Position5>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="21" Column="48" TopLine="3"/>
-      </Position5>
-      <Position6>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="94" Column="43" TopLine="72"/>
-      </Position6>
-      <Position7>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="71" Column="52" TopLine="61"/>
-      </Position7>
-      <Position8>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="50" Column="25" TopLine="27"/>
-      </Position8>
-      <Position9>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="17" Column="34" TopLine="2"/>
-      </Position9>
-      <Position10>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="53" Column="3" TopLine="38"/>
-      </Position10>
-      <Position11>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="8" Column="32" TopLine="1"/>
-      </Position11>
-      <Position12>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="29" Column="47" TopLine="1"/>
-      </Position12>
-      <Position13>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="17" Column="99" TopLine="2"/>
-      </Position13>
-      <Position14>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="23" Column="94" TopLine="5"/>
-      </Position14>
-      <Position15>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="28" Column="24" TopLine="5"/>
-      </Position15>
-      <Position16>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="61" Column="22" TopLine="32"/>
-      </Position16>
-      <Position17>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="8" Column="35" TopLine="1"/>
-      </Position17>
-      <Position18>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="28" Column="20" TopLine="13"/>
-      </Position18>
-      <Position19>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="31" Column="22" TopLine="12"/>
-      </Position19>
-      <Position20>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="37" Column="26" TopLine="22"/>
-      </Position20>
-      <Position21>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="15" Column="25" TopLine="10"/>
-      </Position21>
-      <Position22>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="40" Column="22" TopLine="31"/>
-      </Position22>
-      <Position23>
         <Filename Value="rigidgroup_unit.pas"/>
         <Caret Line="48" Column="85" TopLine="33"/>
-      </Position23>
-      <Position24>
+      </Position1>
+      <Position2>
         <Filename Value="rigidgroup_unit.pas"/>
         <Caret Line="54" Column="49" TopLine="35"/>
-      </Position24>
-      <Position25>
+      </Position2>
+      <Position3>
         <Filename Value="rigidgroup_unit.pas"/>
         <Caret Line="56" Column="30" TopLine="37"/>
-      </Position25>
-      <Position26>
+      </Position3>
+      <Position4>
         <Filename Value="rigidgroup_unit.pas"/>
         <Caret Line="60" Column="38" TopLine="37"/>
-      </Position26>
-      <Position27>
+      </Position4>
+      <Position5>
         <Filename Value="rigidgroup_unit.pas"/>
         <Caret Line="61" Column="20" TopLine="37"/>
+      </Position5>
+      <Position6>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="18" Column="5" TopLine="9"/>
+      </Position6>
+      <Position7>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="19" Column="13" TopLine="18"/>
+      </Position7>
+      <Position8>
+        <Filename Value="sinewave_unit.pas"/>
+        <Caret Line="41" Column="20" TopLine="25"/>
+      </Position8>
+      <Position9>
+        <Filename Value="sinewave_unit.pas"/>
+        <Caret Line="48" Column="44" TopLine="30"/>
+      </Position9>
+      <Position10>
+        <Filename Value="sinewave_unit.pas"/>
+        <Caret Line="19" Column="38" TopLine="6"/>
+      </Position10>
+      <Position11>
+        <Filename Value="sinewave_unit.pas"/>
+        <Caret Line="13" Column="41" TopLine="6"/>
+      </Position11>
+      <Position12>
+        <Filename Value="sinewave_unit.pas"/>
+        <Caret Line="22" Column="51" TopLine="6"/>
+      </Position12>
+      <Position13>
+        <Filename Value="sinewave_unit.pas"/>
+        <Caret Line="31" Column="27" TopLine="6"/>
+      </Position13>
+      <Position14>
+        <Filename Value="sinewave_unit.pas"/>
+        <Caret Line="19" Column="14" TopLine="6"/>
+      </Position14>
+      <Position15>
+        <Filename Value="sinewave_unit.pas"/>
+        <Caret Line="51" Column="45" TopLine="31"/>
+      </Position15>
+      <Position16>
+        <Filename Value="sinewave_unit.pas"/>
+        <Caret Line="40" Column="21" TopLine="28"/>
+      </Position16>
+      <Position17>
+        <Filename Value="sinewave_unit.pas"/>
+        <Caret Line="48" Column="21" TopLine="32"/>
+      </Position17>
+      <Position18>
+        <Filename Value="sinewave_unit.pas"/>
+        <Caret Line="63" Column="27" TopLine="38"/>
+      </Position18>
+      <Position19>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="114" Column="16" TopLine="110"/>
+      </Position19>
+      <Position20>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="115" Column="5" TopLine="92"/>
+      </Position20>
+      <Position21>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="106" Column="46" TopLine="93"/>
+      </Position21>
+      <Position22>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="108" Column="75" TopLine="92"/>
+      </Position22>
+      <Position23>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="117" Column="49" TopLine="100"/>
+      </Position23>
+      <Position24>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="102" Column="29" TopLine="90"/>
+      </Position24>
+      <Position25>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="117" Column="48" TopLine="101"/>
+      </Position25>
+      <Position26>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="113" Column="52" TopLine="101"/>
+      </Position26>
+      <Position27>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="114" Column="32" TopLine="101"/>
       </Position27>
       <Position28>
         <Filename Value="unit1.pas"/>
-        <Caret Line="18" Column="5" TopLine="9"/>
+        <Caret Line="117" Column="59" TopLine="101"/>
       </Position28>
       <Position29>
         <Filename Value="unit1.pas"/>
-        <Caret Line="19" Column="13" TopLine="18"/>
+        <Caret Line="102" Column="29" TopLine="98"/>
       </Position29>
+      <Position30>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="113" Column="29" TopLine="103"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
