--- a/project1.lpi
+++ b/project1.lpi
@@ -9,7 +9,7 @@
       </Flags>
       <MainUnit Value="0"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="1"/>
+      <ActiveEditorIndexAtStart Value="9"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -33,15 +33,15 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="15">
+    <Units Count="19">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="project1"/>
-        <CursorPos X="8" Y="12"/>
+        <CursorPos X="68" Y="11"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="2"/>
-        <UsageCount Value="77"/>
+        <EditorIndex Value="3"/>
+        <UsageCount Value="136"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
@@ -50,10 +50,10 @@
         <IsPartOfProject Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="30" Y="175"/>
-        <TopLine Value="162"/>
+        <CursorPos X="14" Y="135"/>
+        <TopLine Value="125"/>
         <EditorIndex Value="0"/>
-        <UsageCount Value="77"/>
+        <UsageCount Value="136"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
@@ -62,80 +62,77 @@
         <UnitName Value="domain_unit"/>
         <CursorPos X="17" Y="16"/>
         <TopLine Value="3"/>
-        <UsageCount Value="77"/>
+        <UsageCount Value="136"/>
       </Unit2>
       <Unit3>
         <Filename Value="point3d_unit.pas"/>
-        <IsPartOfProject Value="True"/>
         <UnitName Value="point3d_unit"/>
-        <CursorPos X="10" Y="71"/>
-        <TopLine Value="48"/>
-        <EditorIndex Value="6"/>
-        <UsageCount Value="77"/>
-        <Loaded Value="True"/>
+        <CursorPos X="1" Y="10"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="118"/>
       </Unit3>
       <Unit4>
         <Filename Value="../../../usr/lib/lazarus/lcl/interfaces/gtk/gtkwinapi.inc"/>
         <CursorPos X="25" Y="4963"/>
         <TopLine Value="4955"/>
-        <UsageCount Value="5"/>
+        <UsageCount Value="0"/>
       </Unit4>
       <Unit5>
         <Filename Value="region_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="region_unit"/>
-        <CursorPos X="17" Y="15"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="7"/>
-        <UsageCount Value="77"/>
+        <CursorPos X="31" Y="9"/>
+        <TopLine Value="6"/>
+        <EditorIndex Value="9"/>
+        <UsageCount Value="136"/>
         <Loaded Value="True"/>
       </Unit5>
       <Unit6>
         <Filename Value="../../../usr/lib/lazarus/lcl/interfaces/gtk/gtkwidgetset.inc"/>
         <CursorPos X="1" Y="1253"/>
         <TopLine Value="1238"/>
-        <UsageCount Value="6"/>
+        <UsageCount Value="1"/>
       </Unit6>
       <Unit7>
         <Filename Value="../../../usr/lib/lazarus/lcl/include/buttoncontrol.inc"/>
-        <CursorPos X="1" Y="45"/>
-        <TopLine Value="30"/>
-        <UsageCount Value="6"/>
+        <CursorPos X="1" Y="53"/>
+        <TopLine Value="39"/>
+        <UsageCount Value="5"/>
       </Unit7>
       <Unit8>
         <Filename Value="../../../usr/share/fpcsrc/2.2.2/rtl/inc/mathh.inc"/>
         <CursorPos X="14" Y="71"/>
         <TopLine Value="56"/>
-        <UsageCount Value="6"/>
+        <UsageCount Value="1"/>
       </Unit8>
       <Unit9>
         <Filename Value="rigidgroup_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="rigidgroup_unit"/>
-        <CursorPos X="17" Y="98"/>
-        <TopLine Value="77"/>
-        <EditorIndex Value="4"/>
-        <UsageCount Value="73"/>
+        <CursorPos X="30" Y="74"/>
+        <TopLine Value="61"/>
+        <EditorIndex Value="5"/>
+        <UsageCount Value="132"/>
         <Loaded Value="True"/>
       </Unit9>
       <Unit10>
         <Filename Value="atom_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="atom_unit"/>
-        <CursorPos X="24" Y="17"/>
+        <CursorPos X="48" Y="24"/>
         <TopLine Value="4"/>
-        <EditorIndex Value="5"/>
-        <UsageCount Value="70"/>
+        <EditorIndex Value="6"/>
+        <UsageCount Value="129"/>
         <Loaded Value="True"/>
       </Unit10>
       <Unit11>
         <Filename Value="sinewave_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="sineWave_unit"/>
-        <CursorPos X="32" Y="46"/>
-        <TopLine Value="50"/>
-        <EditorIndex Value="3"/>
-        <UsageCount Value="64"/>
+        <CursorPos X="57" Y="17"/>
+        <TopLine Value="2"/>
+        <EditorIndex Value="4"/>
+        <UsageCount Value="123"/>
         <Loaded Value="True"/>
       </Unit11>
       <Unit12>
@@ -143,142 +140,182 @@
         <UnitName Value="math"/>
         <CursorPos X="10" Y="276"/>
         <TopLine Value="263"/>
-        <UsageCount Value="6"/>
+        <UsageCount Value="1"/>
       </Unit12>
       <Unit13>
         <Filename Value="../../../usr/share/fpcsrc/2.2.4/rtl/inc/systemh.inc"/>
         <CursorPos X="11" Y="482"/>
         <TopLine Value="469"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="5"/>
       </Unit13>
       <Unit14>
         <Filename Value="linkedlist_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="linkedList_unit"/>
-        <CursorPos X="1" Y="1"/>
+        <CursorPos X="43" Y="17"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="1"/>
-        <UsageCount Value="20"/>
+        <EditorIndex Value="2"/>
+        <UsageCount Value="79"/>
         <Loaded Value="True"/>
       </Unit14>
+      <Unit15>
+        <Filename Value="../../../usr/lib/lazarus/lcl/include/control.inc"/>
+        <CursorPos X="1" Y="2095"/>
+        <TopLine Value="2081"/>
+        <UsageCount Value="5"/>
+      </Unit15>
+      <Unit16>
+        <Filename Value="myinteger_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="myinteger_unit"/>
+        <CursorPos X="20" Y="1"/>
+        <TopLine Value="1"/>
+        <EditorIndex Value="1"/>
+        <UsageCount Value="39"/>
+        <Loaded Value="True"/>
+      </Unit16>
+      <Unit17>
+        <Filename Value="sinesegment_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="sineSegment_unit"/>
+        <CursorPos X="18" Y="11"/>
+        <TopLine Value="1"/>
+        <EditorIndex Value="8"/>
+        <UsageCount Value="38"/>
+        <Loaded Value="True"/>
+      </Unit17>
+      <Unit18>
+        <Filename Value="pointnd_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="pointnd_unit"/>
+        <CursorPos X="19" Y="193"/>
+        <TopLine Value="178"/>
+        <EditorIndex Value="7"/>
+        <UsageCount Value="38"/>
+        <Loaded Value="True"/>
+      </Unit18>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="29" Column="53" TopLine="9"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="161" Column="11" TopLine="154"/>
       </Position1>
       <Position2>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="65" Column="18" TopLine="49"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="160" Column="1" TopLine="146"/>
       </Position2>
       <Position3>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="172" Column="13" TopLine="161"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="168" Column="13" TopLine="153"/>
       </Position3>
       <Position4>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="41" Column="28" TopLine="28"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="77" Column="1" TopLine="63"/>
       </Position4>
       <Position5>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="127" Column="48" TopLine="115"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="78" Column="1" TopLine="64"/>
       </Position5>
       <Position6>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="180" Column="7" TopLine="162"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="46" Column="1" TopLine="32"/>
       </Position6>
       <Position7>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="127" Column="86" TopLine="114"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="47" Column="1" TopLine="33"/>
       </Position7>
       <Position8>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="28" Column="27" TopLine="7"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="48" Column="1" TopLine="34"/>
       </Position8>
       <Position9>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="27" Column="25" TopLine="7"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="49" Column="1" TopLine="35"/>
       </Position9>
       <Position10>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="28" Column="44" TopLine="6"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="50" Column="1" TopLine="36"/>
       </Position10>
       <Position11>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="17" Column="67" TopLine="6"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="51" Column="1" TopLine="37"/>
       </Position11>
       <Position12>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="26" Column="17" TopLine="4"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="52" Column="1" TopLine="38"/>
       </Position12>
       <Position13>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="64" Column="96" TopLine="31"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="54" Column="1" TopLine="40"/>
       </Position13>
       <Position14>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="44" Column="1" TopLine="30"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="56" Column="1" TopLine="42"/>
       </Position14>
       <Position15>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="19" Column="5" TopLine="1"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="79" Column="1" TopLine="65"/>
       </Position15>
       <Position16>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="127" Column="22" TopLine="114"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="80" Column="1" TopLine="66"/>
       </Position16>
       <Position17>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="175" Column="55" TopLine="163"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="81" Column="1" TopLine="67"/>
       </Position17>
       <Position18>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="165" Column="24" TopLine="152"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="78" Column="28" TopLine="68"/>
       </Position18>
       <Position19>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="176" Column="9" TopLine="152"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="168" Column="1" TopLine="154"/>
       </Position19>
       <Position20>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="25" Column="18" TopLine="8"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="148" Column="1" TopLine="134"/>
       </Position20>
       <Position21>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="101" Column="5" TopLine="87"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="126" Column="1" TopLine="112"/>
       </Position21>
       <Position22>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="108" Column="9" TopLine="88"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="128" Column="1" TopLine="114"/>
       </Position22>
       <Position23>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="25" Column="39" TopLine="7"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="134" Column="1" TopLine="120"/>
       </Position23>
       <Position24>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="18" Column="50" TopLine="1"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="149" Column="1" TopLine="135"/>
       </Position24>
       <Position25>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="41" Column="73" TopLine="17"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="150" Column="1" TopLine="136"/>
       </Position25>
       <Position26>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="51" Column="20" TopLine="45"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="152" Column="1" TopLine="138"/>
       </Position26>
       <Position27>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="52" Column="3" TopLine="38"/>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="202" Column="27" TopLine="182"/>
       </Position27>
       <Position28>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="62" Column="36" TopLine="50"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="135" Column="11" TopLine="125"/>
       </Position28>
       <Position29>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="176" Column="10" TopLine="164"/>
+        <Filename Value="rigidgroup_unit.pas"/>
+        <Caret Line="74" Column="27" TopLine="61"/>
       </Position29>
+      <Position30>
+        <Filename Value="pointnd_unit.pas"/>
+        <Caret Line="199" Column="27" TopLine="185"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
